--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.2.7",
     "babel-jest": "^29.6.4",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-webpack-plugin": "^4.0.1",
@@ -35,7 +36,9 @@
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
+    "sass-loader": "^13.3.2",
     "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
